# RustJourney

./: .gitignore  Cargo.toml  README.md  shell.nix
.devcontainer/: devcontainer.json
Rust for Rustaceans/: 01 Foundations.md  02 Types.md  03 Designing interfaces.md  04 Error handling.md  05 Project structure.md  06 Testing.md  07 Macros.md  08 Asynchronous programming.md  09 Unsafe code.md  10 Concurrency and parallelism.md  11 Foreign function interfaces.md  12 Without standard library.md
deeplearning/: Cargo.toml
deeplearning/src/: main.rs
digest/: Cargo.toml  README.md  digest.toml  example.md  example_digest.html  example_digest.md
digest/src/: errors.rs  main.rs
digest/src/config/: feed.rs  mod.rs  model.rs  timerange.rs
digest/src/models/: feed.rs  mod.rs  newsletter.rs  post.rs
fetchpdb/: Cargo.toml  README.md
fetchpdb/src/: arguments.rs  context.rs  main.rs
openai-summarize/: Cargo.toml
openai-summarize/src/: main.rs
parquetify/: Cargo.toml
parquetify/src/: main.rs
rustlings/exercises/04_primitive_types/: primitive_types3.rs  primitive_types4.rs
rustlings/exercises/05_vecs/: vecs2.rs
rustlings/exercises/06_move_semantics/: move_semantics3.rs
rustlings/exercises/07_structs/: structs1.rs  structs2.rs  structs3.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/09_strings/: strings3.rs
rustlings/exercises/10_modules/: modules2.rs  modules3.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
xrill/: Cargo.toml  README.md
xrill/src/: arguments.rs  main.rs
xrill/src/programs/: mod.rs
xrill/src/programs/fetchpdb/: lib.rs
xrill/src/programs/parquetify/: lib.rs  mod.rs
(+55 files in other folders)
