[package]
name = "digest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.13"
regex = "1.11"
reqwest = { version = "0.12" }
rss = "2.0"
serde = "1.0"
telegraph-rs = "0.6"
async-openai = "0.27"
thiserror = { version = "2.0" }
config = "0.15"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
