[package]
name = "fetchpdb"
version = "0.0.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
reqwest = { version = "0.12.12" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
